﻿A changelog for recent builds as pasted into the sourceforge page.

Generally created by hand after running:
   hg log -rb2xx: > log.out
However contributors are encouraged to add their own entries for their work.

Since build 221:
----------------
* Moved to github for development. As a part of this, I've changed every issue
  in this file from "#xxx" to "#sfxxx to indicate they refer to the old
  sourceforge issue numbers.

* Change PyIMAPIFolder CopyMessages, DeleteMessages, and EmptyFolder to return
  the HRESULT (Nick Czeczulin via patch #sf162)

* Fix a reference leak of Py_None in a couple of MAPI methods (Nick Czeczulin
  via patch #sf149)

Since build 220:
----------------
* Add PyIMapiSession::AdminServices method (Nick Czeczulin via patch #sf161)

* Allow win32com.client.CastTo() to have a typelib specified, which will be
  used to locate the object definition (Pieter Aarnoutse via patch #sf136)

* Add pythoncom.StgOpenStorageOnILockBytes (Nick Czeczulin via patch #sf135)

* IDispatch failures will try and get error information via IErrorInfo (Stefan
  Schukat via patch #sf130)

* A null SPropTagArray will now return None instead of crashing.

* New mapi/exchange interfaces PyIExchangeManageStoreEx, PyIMAPIAdviseSink,
 PyIMsgStore::Advise, PyIMsgStore::Unadvise, HrAllocAdviseSink,
 HrThisThreadAdviseSink, and HrDispatchNotifications (Nick Czeczulin)

Since build 219:
----------------
* win32com - sys.argv[0] may be set to a bytes object instead of a string on
  Python 3 when implementing an in-process COM object.

* Fix that allows a property to be fetched on COM objects to work in more cases
  (Fredrik Orderud via patch #sf155)

* Disabled exchange and exchdapi modules on Python 2.5 due to unresolved
  build issues.

* Fix potential crash in SHGetIDListFromObject and SHGetFileInfo issues (rupole)

* Allow GetShortPathName to handle long paths in unicode mode (ruple)

* Fix intermittent crash in win32cred.CredRead() (bug #sf670, rupole)
